--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -11,6 +11,7 @@
         margin 0
         +below($sm)
             padding 130px 0px 110px
+            height 460px
         .block__title
             color #fff
             position relative
