--- a/_stylus/layout/page.styl
+++ b/_stylus/layout/page.styl
@@ -13,7 +13,7 @@
             w($xl)
             margin-bottom emRhythm(5, $base-em-font-size)
             +below($sm)
-                margin-bottom emRhythm(2, $base-em-font-size)
+                margin-bottom emRhythm(3, $base-em-font-size)
         &__title
             color $dark-color
             margin-bottom emRhythm(3, $ms-up3)
